--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://dribbble.com/shots/5751157-Bear-eSports-Mascot-Logo/attachments" class="img-responsive" alt="Circus tent">
+                        <img src="/static/img/portfolio/chesstastic.jpeg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
